<resources>
    <string name="app_name">QuizApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quiz">Quiz</string>
    <string name="questions_amount">Questions amount: </string>
    <string name="category">Category</string>
    <string name="all">All</string>
    <string name="difficulty">Difficulty</string>
    <string name="start">start</string>
    <string name="title_map">Map</string>
    <string name="title_profile">Profile</string>

    <string-array name="category">
        <item>All</item>
        <item>History</item>
        <item>Math</item>
        <item>Astronomy</item>
    </string-array>

    <string-array name="difficulty">
        <item>All</item>
        <item>Elementary</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

</resources>