<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.quizFragment.QuizFragment">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/quiz"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

    </Toolbar>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:padding="70dp"
        android:src="@drawable/quiz"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:ignore="ContentDescription" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="70dp"
        android:paddingEnd="70dp"
        app:layout_constraintTop_toBottomOf="@id/imageView">

        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/questions_amount"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tvQuestion"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/tvQuestion"
            android:text="10"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvQuestion"
            android:layout_marginStart="-15dp"
            android:layout_marginTop="5dp"
            android:max="20"
            android:progress="10"
            android:progressBackgroundTint="#ECEBED"
            android:progressTint="#BE52F2"
            android:thumbTint="#BE52F2" />

        <TextView
            android:id="@+id/tvCategoryFirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/seekBar"
            android:layout_marginTop="10dp"
            android:text="@string/category"
            android:textSize="12sp" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_below="@id/tvCategoryFirst"
            app:cardCornerRadius="6dp">

            <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinnerCategory"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:entries="@array/category"
            android:visibility="visible" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tvDifficultyFirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardCategory"
            android:layout_marginTop="10dp"
            android:text="@string/difficulty"
            android:textSize="12sp" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardDifficulty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_below="@id/tvDifficultyFirst"
            app:cardCornerRadius="6dp">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinnerDifficulty"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:entries="@array/difficulty"
                android:visibility="visible" />

        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/btnStart"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_below="@id/cardDifficulty"
            android:layout_centerInParent="true"
            android:layout_marginTop="64dp"
            android:backgroundTint="#6979F8"
            android:text="@string/start"
            android:textSize="15sp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>